[project]
name = "framework"
version = "0.1.0"
description = "A Python library for building applications with clean, modular architecture"
readme = "README.md"
authors = [
    { name = "Xiubo Zhang", email = "zhangxiubo@gmail.com" }
]
dependencies = [
    "deepdiff>=8.6.0",
    "klepto>=0.2.7",
    "smart-open>=7.3.0.post1",
    "sqlalchemy>=2.0.42",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["framework", "library", "modular"]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "networkx>=3.5",
    "pytest>=8.4.1",
]
